2008-07-22  Pedro Gracia  <pedro@flumotion.com>

	* flumotion/common/i18n.py:
	Return untranslated singular strings with or
	without arguments.

2008-07-22  Pedro Gracia  <pedro@flumotion>

	* flumotion/common/i18n.py:
	* flumotion/common/netutils.py:
	Reverting r7049. Cause: moap cl ci with no prep before.

2008-07-22  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/componentlist.py:
	* flumotion/common/pygobject.py:
	Remove with_construct_properties and the last remaining callsite

2008-07-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion.spec.in:
	  Add gettext as buildrequires because intltool doesn't pull it in.

2008-07-21  Pedro Gracia  <pedro@flumotion.com>

	* flumotion/common/i18n.py:
	* flumotion/test/test_i18n.py:
	Return untranslated strings (singular and plural) 
	with or without arguments ok.

2008-07-21  Jordi Massaguer i Pla  <jordi@flumotion.com>

	* flumotion.spec.in:
	added the multilanguage label.

2008-07-21  Jordi Massaguer i Pla  <jordi@flumotion.com>

	* flumotion.spec.in:
	removed the multilanguage label.

2008-07-21  Johan Dahlin  <johan@flumotion.com>

	* flumotion/common/vfs.py:
	* flumotion/test/test_common_vfs.py:
	simplify imports, try to instantiate a directory to see
	if we get an import error or not, since this all changed
	due to pychecker, sigh.

2008-07-21  Jordi Massaguer i Pla  <jordi@flumotion.com>

	* flumotion.spec.in:
	Added pygtk2-libglade and python-dateutil packages.

2008-07-21  Johan Dahlin  <johan@gnome.org>

	* flumotion/common/vfsgio.py:
	* flumotion/common/vfsgnome.py:
	Add keepgoing and move the imports to scopes, this should
	fix buildbot on machines which lacks gnomevfs or gio

2008-07-21  Jordi Massaguer i Pla  <jordi@flumotion.com>

	* flumotion.spec.in:
	Added python-twisted-conch and python-iCalendar as Requires and
        BuildRequires.

2008-07-21  Johan Dahlin  <johan@gnome.org>

	* flumotion/common/errors.py:
	* flumotion/common/vfs.py:
	* flumotion/common/vfsgio.py: